# rustemp

./: .gitignore  AGENTS.md  Cargo.toml  build.rs
.agents/skills/example-skill/: SKILL.md
.cursor/agents/: architect.md  debugger.md  devops.md  docs.md  implementer.md  performance.md  planner.md  refactorer.md  reviewer.md  security.md  skill-creator.md  tester.md
.cursor/rules/: activate-advanced-planning.mdc  advanced-planning-framework.mdc  agents.mdc  anti-patterns.mdc  architecture.mdc  coding.mdc  dioxus.mdc  flutter.mdc  refactors.mdc  rust-ddd.mdc
.opencode/agents/: architect.md  debugger.md  devops.md  docs.md  implementer.md  performance.md  planner.md  refactorer.md  reviewer.md  security.md  skill-creator.md  tester.md
src/: bootstrap.rs  lib.rs  main.rs  tracing.rs
src/application/service/: find_and_forecast_info.rs  mod.rs
src/application/use_case/: find_place.rs  get_forecast_info.rs  mod.rs
src/domain/: day.rs  error.rs  forecast_info.rs  id.rs  lang.rs  location.rs  mod.rs  municipality.rs  parameter.rs  path.rs  repository.rs  time.rs  type.rs
src/infrastructure/: mod.rs
src/infrastructure/meteogalicia/: cache.rs  cached_repository.rs  client.rs  dtos.rs  mod.rs  repository.rs
src/interface/: cli.rs  find_args.rs  forecast_args.rs  mod.rs  to_json.rs
