[package]
name = "rustemp"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
reqwest = { version = "0.13", features = ["rustls", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
dirs = "6"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
